Fix a memory leak in if_delgroups() introduced in r334118.

PR:		242712
Submitted by:	ghuckriede@blackberry.com
MFC after:	3 days


git-svn-id: svn+ssh://svn.freebsd.org/base/head@355938 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f